# iris

./: CLAUDE.md  implementation_plan.md  readme.md
01-brainstorm/: brainstorm.md
02-literature-review/: README.md
02-literature-review/notes/_templates/: concept.md  paper.md  question.md
02-literature-review/notes/concepts/: curriculum-analytics.md  esco-ontology.md  kl-divergence.md  rag-skill-extraction.md  skill-gap-quantification.md  thai-nlp.md  tpqi-framework.md  wangchanberta.md
02-literature-review/notes/papers/: ahadi-2022-skills-taught-vs-sought.md  aljohani-2022-curriculum-skill-gap-bibliometric.md  chaiaroon-2025-thai-digital-workforce-matching.md  dixon-2023-occupational-models-42m.md  fettach-2025-skill-demand-temporal-kg.md  hilliger-2022-curriculum-analytics-tool.md  januzaj-2022-cosine-similarity-he-job-market.md  kavargyris-2025-escox-skill-extraction.md  lertmethaphat-2025-thai-job-market-nlp.md  lowphansirikul-2021-wangchanberta.md  luyen-2025-skill-decomposition-ontology.md  macedo-2022-skills-demand-forecasting-temporal.md  phaphuangwittayakul-2018-thai-skill-demand-jobthai.md  phatthiyaphaibun-2023-pythainlp.md  rikala-2024-skill-gaps-industry40-review.md  sabet-2024-course-skill-atlas.md  seif-2024-dynamic-jobs-skills-kg.md  senger-2024-dl-skill-extraction-survey.md  siddoo-2019-thai-digital-workforce-competency.md  tipsena-2025-predicting-thai-digital-workforce.md  vo-2022-nlp-curriculum-learning-path.md  weerasombat-2025-thai-employer-skill-priorities.md  xu-2025-llm-curricular-analytics.md
02-literature-review/notes/questions/: q-credit-weighting.md  q-gap-direction.md  q-implied-skills.md  q-job-posting-sources.md  q-registry-lookup.md  q-sample-size.md  q-segment-inference.md  q-segment-taxonomy.md  q-skill-taxonomy.md  (+4 more)
03-solution-design/: product-design.md  solution-proposal.md
04-implementation/: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.yml
04-implementation/backend/: Dockerfile  alembic.ini  requirements.txt
04-implementation/backend-rust/: .env.example  Cargo.toml  Dockerfile.api  Dockerfile.worker
04-implementation/backend-rust/api/: Cargo.toml
04-implementation/backend-rust/api/src/: error.rs  main.rs  queue.rs  state.rs
04-implementation/backend-rust/api/src/routes/: analysis.rs  jobs.rs  mod.rs  programmes.rs  reports.rs
04-implementation/backend-rust/migrations/: 20260505_0001_initial.sql
04-implementation/backend-rust/shared/: Cargo.toml
04-implementation/backend-rust/shared/src/: config.rs  db.rs  jobs.rs  lib.rs
04-implementation/backend-rust/shared/src/models/: analysis.rs  job.rs  mod.rs  programme.rs  vocab.rs
04-implementation/backend-rust/worker/: Cargo.toml
04-implementation/backend-rust/worker/src/: main.rs  state.rs
04-implementation/backend-rust/worker/src/jobs/: analysis_job.rs  mod.rs  report_job.rs  scrape_job.rs  tqf_job.rs
04-implementation/backend-rust/worker/src/pipeline/: gap_engine.rs  llm_client.rs  mod.rs  report_generator.rs  skill_extractor.rs  tqf_parser.rs  vocab_builder.rs
04-implementation/backend-rust/worker/src/pipeline/scraper/: common.rs  jobbkk.rs  jobsdb.rs  jobthai.rs  jobtopgun.rs  mod.rs
04-implementation/backend-rust/worker/templates/: report.html
04-implementation/cluster-sidecar/: Dockerfile  main.py  requirements.txt
04-implementation/frontend/: Dockerfile  package.json
04-implementation/nginx/: nginx.conf
04-implementation/worker/: Dockerfile  celery_app.py  db.py  models.py  requirements.txt
(+35 files in other folders)
