[workspace]
members = ["shared", "api", "worker"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = "0.4"

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "json",
    "migrate",
] }

# Job queue (Celery replacement)
apalis = { version = "0.6", features = ["tracing", "retry", "timeout"] }
apalis-redis = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM / OpenAI-compatible API
async-openai = "0.23"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }

# HTML parsing (scraper replacement)
scraper = "0.20"

# PDF text extraction
pdf-extract = "0.7"

# HTML templates (Jinja2 replacement)
tera = "1"

# Math (numpy replacement)
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"

# Regex
regex = "1"

# Hashing (stable posting IDs)
sha2 = "0.10"

# URL encoding
urlencoding = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
tokio-util = { version = "0.7", features = ["io"] }
