[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
