[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
async-openai = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
pdf-extract = { workspace = true }
tera = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
